// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RDialog.vue should render a disabled component and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       tabindex="-1"
       style="z-index: 0;"
  >
    <div class="dialog"
         style="display: none;"
    >
    </div>
  </div>
</div>

`;

exports[`RDialog.vue should render a fullscreen component and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       tabindex="-1"
       style="z-index: 0;"
  >
    <div class="dialog dialog_fullscreen"
         style="display: none;"
    >
    </div>
  </div>
</div>

`;

exports[`RDialog.vue should render a lazy component and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       tabindex="-1"
       style="z-index: 0;"
  >
    <div class="dialog"
         style="display: none;"
    >
    </div>
  </div>
</div>

`;

exports[`RDialog.vue should render a persistent component and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       tabindex="-1"
       style="z-index: 0;"
  >
    <div class="dialog dialog_persistent"
         style="display: none;"
    >
    </div>
  </div>
</div>

`;

exports[`RDialog.vue should render a scrollable component and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       tabindex="-1"
       style="z-index: 0;"
  >
    <div class="dialog dialog_scrollable"
         style="display: none;"
    >
    </div>
  </div>
</div>

`;

exports[`RDialog.vue should render component and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       tabindex="-1"
       style="z-index: 0;"
  >
    <div class="dialog"
         style="display: none;"
    >
    </div>
  </div>
</div>

`;

exports[`RDialog.vue should render component with custom origin and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       tabindex="-1"
       style="z-index: 0;"
  >
    <div class="dialog"
         style="display: none;"
    >
    </div>
  </div>
</div>

`;

exports[`RDialog.vue should render component with custom transition and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       tabindex="-1"
       style="z-index: 0;"
  >
    <div class="dialog"
         style="display: none;"
    >
    </div>
  </div>
</div>

`;

exports[`RDialog.vue should render component with custom width (max-width) and match snapshot 1`] = `

<div class="dialog__container"
     style="display: block;"
>
  <div class="dialog__content"
       tabindex="-1"
       style="z-index: 0;"
  >
    <div class="dialog"
         style="max-width: 100px; display: none;"
    >
    </div>
  </div>
</div>

`;
